<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Together</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">Hello,</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="email">E-mail: </string>
    <string name="login">Login</string>
    <string name="go_sign_up_page">Sign Up</string>
    <string name="forget_password">Forget Password?</string>
    <string name="about">About</string>
    <string name="top_helpful_users">Top Helpful Users</string>
    <string name="my_communities">My Communities</string>
    <string name="home_logo">Home logo</string>
    <string name="advanced_search">Search</string>
    <string name="title_activity_home">Task Together</string>
    <string name="my_profile">My Profile</string>
    <string name="create_new_community">Create New Community</string>
    <string name="title_activity_create_community">Create Community</string>
    <string name="community_name">Community Name</string>
    <string name="description">Description</string>
    <string name="add_tags">Add tags</string>
    <string name="create">Create</string>
    <string name="title_activity_community">Community</string>
    <string name="title_activity_create_task">CreateTaskActivity</string>
    <string name="title_activity_followed_tasks">Followed Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Description</string>
    <string name="create_task">Create Task</string>
    <string name="title_activity_task">Task</string>
    <string name="task_deadline">Deadline</string>
    <string name="task_type_of_need">Type of need</string>
    <string name="task_type_next_select_task_fields">Press next button to specify fields of this task type</string>
    <string name="next_button">Next &gt;&gt;</string>
    <string name="create_task_type_button">Create Task Type</string>
    <string name="need_type_prompt">Choose a type</string>

    <string-array name="need_type_array">
        <item>Good</item>
        <item>Service</item>
        <item>Only Form</item>
    </string-array>

    <string name="title_activity_create_task_type">Create Task Type</string>
    <string name="create_task_type">Create Task Type</string>
    <string name="title_activity_my_Communities">My Communities</string>
    <string name="all_communities">All Communities</string>
    <string name="new_community">New Community</string>
    <string name="followed_tasks_below">Followed Tasks</string>
    <string name="logout">Logout</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="user_name">Username</string>
    <string name="e_mail">E-mail Address</string>
    <string name="user_password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="form_field_type_prompt">Choose a form type</string>
    <string name="text">Text</string>
    <string name="check_box">CheckBox</string>
    <string name="dropdown">DropDown</string>

    <string-array name="form_field_type_array">
        <item>@string/text</item>
        <item>@string/check_box</item>
        <item>@string/dropdown</item>
    </string-array>

    <string name="add_form_field">Add</string>
    <string name="task_type_select">Select</string>
    <string name="task_description_info">Description</string>
    <string name="task_follow_button">Follow</string>
    <string name="task_reply_button">Reply</string>
    <string name="task_unfollow_button">Unfollow</string>
    <string name="join_community">Join</string>
    <string name="leave_community">Leave</string>
    <string name="followed_tasks">Followed Tasks</string>
    <string name="title_activity_home_activity2">Task Together</string>
    <string name="drawer_open">Task Together</string>
    <string name="drawer_close_home">Followed Tasks</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Create Community</item>
        <item>My Profile</item>
        <item>My Communities</item>
        <item>Newest Communities</item>
        <item>Logout</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/home_icon</item>
        <item>@drawable/create_community_icon</item>
        <item>@drawable/profile_icon</item>
        <item>@drawable/communities_icon</item>
        <item>@drawable/newest_communities</item>
        <item>@drawable/logout_icon</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!-- Profile Fragment Labels -->
    <string name="profile_label_name">Name:</string>
    <string name="profile_label_surname">Surname:</string>
    <string name="profile_label_email">Email:</string>
    <string name="profile_label_reputation">Reputation:</string>
    <string name="profile_label_edit_profile">Edit Profile</string>
    <string name="profile_label_save_profile">Save</string>
    <string name="select_task_type">Select a Task Type</string>
    <string name="question_name_of_requirement">What is the need?</string>
    <string name="question_quantity_of_requirement">What is the required quantity of your need?</string>
    <string name="question_name_of_service">What service do you need?</string>
    <string name="task_type_name">Task Type Name</string>
    <string name="add_form_fields">Form Fields</string>
    <string name="add_reply_fields">Reply Fields</string>

    <!-- Custom Field Types -->
    <string name="custom_fieldtype_short_text">Question for Short Text Field</string>
    <string name="custom_fieldtype_long_text">Question for Long Text Field</string>
    <string name="custom_fieldtype_checkbox">Question for Checkbox Field</string>
    <string name="custom_fieldtype_select">Question for Drop Down Field</string>
    <string name="custom_fieldtype_radio">Question for Radio Field</string>
    <string name="custom_fieldtype_date">Question for Date Field</string>
    <string name="custom_fieldtype_integer">Question for Integer Field</string>
    <string name="custom_fieldtype_float">Question for Float Field</string>
    <string name="custom_fieldtype_add_another_option_btn">Add another option</string>
    
    <!-- loading placeholder -->
    <string name="loading">loading...</string>
    
    <!-- Task Page -->
    <string name="task_page_task_replies_title">Task Replies</string>

</resources>