<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/task_type_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/task_name" />

    <EditText
        android:id="@+id/task_type_description"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:hint="@string/task_description"
        android:inputType="textMultiLine" />

    <Spinner
        android:id="@+id/need_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/need_type_array"
        android:prompt="@string/need_type_prompt" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_form_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_form_fields" />

        <Button
            android:id="@+id/button_reply_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_reply_fields" />
    </LinearLayout>

    <Button
        android:id="@+id/button_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_task_type" />

</LinearLayout>