<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a0cfff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/task_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/task_name" >
    </EditText>

    <EditText
        android:id="@+id/task_description"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_below="@id/task_name"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/task_description"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/task_deadline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_description"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/task_deadline" />

    <EditText
        android:id="@+id/task_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_deadline"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/task_type_of_need" />

    <EditText
        android:id="@+id/task_tags"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_type"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/add_tags" />

    <Button
        android:id="@+id/button_task_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_tags"
        android:text="@string/create" />

</RelativeLayout>