<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/blue_button"
        android:padding="3dp" >

        <ImageButton
            android:id="@+id/button_home_my_profile"
            android:layout_width="48dp"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/profile_icon" />

        <ImageButton
            android:id="@+id/button_logout"
            android:layout_width="48dp"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/logout_icon" />

        <Button
            android:id="@+id/button_my_communities"
            style="@style/ButtonText"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@id/button_logout"
            android:layout_toRightOf="@id/button_home_my_profile"
            android:background="@drawable/black_button"
            android:text="@string/my_communities"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/top_bar2"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_below="@id/top_bar"
        android:background="@drawable/backgroundtt4"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/button_home_create_new_community"
            style="@style/ButtonText"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="@drawable/green_button"
            android:text="@string/new_community"
            android:textSize="14sp" />

        <Button
            android:id="@+id/button_all_communities"
            style="@style/ButtonText"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="@drawable/purple_button"
            android:text="@string/all_communities"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/followed_tasks"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar2"
        android:background="#CCC"
        android:gravity="center_horizontal"
        android:text="@string/followed_tasks_below"
        android:textSize="14sp" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/followed_tasks" />

</RelativeLayout>