<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <View
        android:id="@+id/community_top_bar"
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/gradient_background_blue" >
    </View>

    <ImageView
        android:id="@+id/community_picture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/profile_picture_layer_list"
        android:contentDescription="@string/app_name"
        android:paddingBottom="4dp"
        android:paddingLeft="2dp"
        android:paddingRight="4dp"
        android:paddingTop="2dp"
        android:src="@drawable/logonew" />

    <TextView
        android:id="@+id/communityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/community_picture"
        android:layout_alignTop="@id/community_picture"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/community_picture"
        android:gravity="center|left"
        android:maxLines="3"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/community_button_holder"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/community_top_bar"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/listview_task_background"
        android:orientation="horizontal"
        android:weightSum="1.0" >

        <Button
            android:id="@+id/button_create_task"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:drawableTop="@drawable/create_task_icon"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/create_task"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_create_task_type"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:drawableTop="@drawable/create_task_type_icon"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/create_task_type"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button_join_community"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:drawableTop="@drawable/join_community_icon"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/join_community"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/communityDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/community_button_holder"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/listview_task_background"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textSize="16sp" />

</RelativeLayout>