<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp" >

    <RelativeLayout
        android:id="@+id/name_field_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/listview_task_background"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/name_field_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:text="@string/community_name"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/community_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_field_textview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/community_name" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/description_field_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_field_layout"
        android:layout_marginTop="10dp"
        android:background="@drawable/listview_task_background"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/description_field_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:text="@string/description"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/community_description"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:layout_below="@id/description_field_textview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/description"
            android:inputType="textMultiLine" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tags_field_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_field_layout"
        android:layout_marginTop="10dp"
        android:background="@drawable/listview_task_background"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp" >

        <TextView
            android:id="@+id/tags_field_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:text="@string/add_tags"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/community_add_tags"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tags_field_textview"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/add_tags" >
        </EditText>
    </RelativeLayout>

    <Button
        android:id="@+id/button_create_community"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tags_field_layout"
        android:layout_marginTop="10dp"
        android:background="@drawable/green_button"
        android:text="@string/create"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>